# window_demo_sdl_learning

./: CMakeLists.txt  README.md
include/: ImageLoader.h  RenderState.h  Texture.h
src/: ImageLoader.cpp  Texture.cpp  main.cpp
